[gd_scene load_steps=5 format=3 uid="uid://duxq8q386ublb"]

[ext_resource type="Script" path="res://FlappyBird/Obstacle.gd" id="1_d6h73"]
[ext_resource type="Texture2D" uid="uid://sql121vjw5w1" path="res://icon.svg" id="2_lymv7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6ccsc"]
size = Vector2(29.5, 69.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yqj5x"]

[node name="Obstacle" type="Area2D"]
script = ExtResource("1_d6h73")

[node name="Top" type="CollisionShape2D" parent="."]
position = Vector2(0.25, 34.75)
shape = SubResource("RectangleShape2D_6ccsc")

[node name="TopSprite" type="Sprite2D" parent="Top"]
texture = ExtResource("2_lymv7")

[node name="Bottom" type="CollisionShape2D" parent="."]
position = Vector2(0, 21)
shape = SubResource("RectangleShape2D_yqj5x")

[node name="BottomSprite" type="Sprite2D" parent="Bottom"]
texture = ExtResource("2_lymv7")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
